--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@ MONGODB_URI = "mongodb://0.0.0.0:27017/ecommerce"
 
 TOKEN_SECRET_KEY = "MJADHAWVDJHEFUWDJAHKWGVCAJUEGEKUFEMFBJGFCJHDG"
 
-FRONTEND_URL = http://localhost:3000/
+FRONTEND_URL = `http://localhost:3000`
